Fixed wrapping of kudos amount

--- a/src/modules/feed/components/Transaction/Header/Header.scss
+++ b/src/modules/feed/components/Transaction/Header/Header.scss
@@ -4,7 +4,7 @@
 }
 
 .kudo_amount {
-    width: 45px;
+    width: 55px;
 }
 
 .image_wrapper {
